# ai-hackathon

./: .env.example  README.md  READY_TO_RUN.md  WEBAPP_SETUP_GUIDE.md  agent.py  fastapi_server.py  fastapi_server_fixed.py  frontend_example.html  mcp_server.py  mcp_server_epht.py  mcp_server_healthcare.py  mcp_server_medlineplus.py  mcp_server_opendata.py  mcp_server_openfda.py  parallel_agent.py  pyproject.toml  setup_webapp.py  start_servers.py  test_fixed_epht.py  test_healthcare_fixed.py
logs/: health_data_agent_log_20250603_140513.md  health_data_agent_log_20250603_140653.md  health_data_agent_log_20250603_140731.md  health_data_agent_log_20250603_141944.md  health_data_agent_log_20250603_152434.md  health_data_agent_log_20250604_084922.md
mcp-servers/epht/: main.py
reports/: api_research_20250603_194351.md  api_research_20250603_194542.md  api_research_20250603_195504.md  api_research_20250603_195829.md  api_research_20250603_200035.md  api_research_20250603_200256.md  api_research_20250604_085037.md  api_research_20250604_085155.md  api_research_20250604_085946.md  api_research_20250604_090247.md  api_research_20250604_091635.md  api_research_20250604_091907.md  api_research_20250604_092209.md  api_research_20250604_092333.md  api_research_20250604_092633.md  api_research_20250604_092841.md  api_research_20250604_093351.md  parallel_health_data_research_20250603_152455.md  parallel_team_research_20250603_193318.md
tools/: __init__.py  cdc_epht.py  cdc_open_data.py  cdc_wonder.py  healthcare_gov.py  medlineplus_connect.py  openfda_api.py
(+3 files in other folders)
