[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.7",
    "autogen-agentchat>=0.5.7",
    "autogen-ext[anthropic]>=0.5.7",
    "fastapi>=0.115.12",
    "fastmcp>=2.5.2",
    "pydantic>=2.11.5",
    "tiktoken>=0.9.0",
]
